--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -34,7 +34,7 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            dist/ocean.gif?color_snake=#FFA500&color_dots=#fff3e0,#ffc266,#ff9933,#ff8000,#e67300
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
