--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,43 +1,41 @@
 name: Generate Snake
 
-# Controls when the action will run
 on:
   schedule:
     # every 12 hours
     - cron: "0 */12 * * *"
-  
-  # This command allows us to run the Action automatically from the Actions tab
+
   workflow_dispatch:
-  
-  # Also run on every push on the main branch
+
   push:
     branches: [ main ]
 
-# The sequence of runs in this workflow
 jobs:
   generate:
     permissions:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    
+
     steps:
       # Checkout the repository
       - name: Checkout
         uses: actions/checkout@v4
-      
-      # Generate snake files
+
+      # Generate snake files with glowing orange color
       - name: Generate snake game
         uses: Platane/snk@v3
         with:
           github_user_name: ChaudharyAliHassan572
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=#FFA500&color_dots=#fff3e0,#ffc266,#ff9933,#ff8000,#e67300
+            dist/github-contribution-grid-snake-dark.svg
+            dist/ocean.gif
+          color_snake: '#FFA500'
+          color_dots: '#fff3e0,#ffc266,#ff9933,#ff8000,#e67300'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+
       # Push the content of <build_dir> to a branch
       - name: Push snake to output branch
         uses: crazy-max/ghaction-github-pages@v4
